kubernetes/adservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adservice
  name: adservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: adservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_adservice:latest
          imagePullPolicy: Always
          name: adservice
          ports:
            - containerPort: 9555
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: adservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
    - name: tcp
      port: 9555
      protocol: TCP
      targetPort: 9555
