kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
