kubernetes/recommendationservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendationservice
  name: recommendationservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: recommendationservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: recommendationservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_recommendationservice:latest
          imagePullPolicy: Always
          name: recommendationservice
          ports:
            - containerPort: 8088
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
    - name: tcp
      port: 8088
      protocol: TCP
      targetPort: 8088
