kubernetes/shippingservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shippingservice
  name: shippingservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shippingservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shippingservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_shippingservice:latest
          imagePullPolicy: Always
          name: shippingservice
          ports:
            - containerPort: 50051
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
    - name: tcp
      port: 50051
      protocol: TCP
      targetPort: 50051
