kubernetes/all.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: online-boutique
spec:
  clusterIP: None 
  selector:
    app: redis-cart
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cart
  namespace: online-boutique
spec:
  serviceName: "redis-cart"
  replicas: 1
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      securityContext:
        fsGroup: 65534
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: online-boutique
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: onlineshop.lptdevops.website
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adservice
  name: adservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: adservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_adservice:latest
          imagePullPolicy: Always
          name: adservice
          ports:
            - containerPort: 9555
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: adservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
    - name: tcp
      port: 9555
      protocol: TCP
      targetPort: 9555


---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cartservice
  name: cartservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: cartservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cartservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_cartservice:latest
          imagePullPolicy: Always
          name: cartservice
          ports:
            - containerPort: 7070
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: cartservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - name: tcp
      port: 7070
      protocol: TCP
      targetPort: 7070


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: checkoutservice
  name: checkoutservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: checkoutservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: checkoutservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_checkoutservice:latest
          imagePullPolicy: Always
          name: checkoutservice
          ports:
            - containerPort: 5050
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: tcp
      port: 5050
      protocol: TCP
      targetPort: 5050


---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currencyservice
  name: currencyservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: currencyservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currencyservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_currencyservice:latest
          imagePullPolicy: Always
          name: currencyservice
          ports:
            - containerPort: 7000
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: currencyservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
    - name: tcp
      port: 7000
      protocol: TCP
      targetPort: 7000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: emailservice
  name: online-boutique-emailservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: emailservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: emailservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_emailservice:latest
          imagePullPolicy: Always
          name: emailservice
          ports:
            - containerPort: 5000
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: emailservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
    - name: tcp
      port: 5000
      protocol: TCP
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paymentservice
  name: paymentservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: paymentservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: paymentservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_paymentservice:latest
          imagePullPolicy: Always
          name: paymentservice
          ports:
            - containerPort: 50050
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: paymentservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - name: tcp
      port: 50050
      protocol: TCP
      targetPort: 50050

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productcatalogservice
  name: productcatalogservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: productcatalogservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: productcatalogservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_productcatalogservice:latest
          imagePullPolicy: Always
          name: productcatalogservice
          ports:
            - containerPort: 3550
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
    - name: tcp
      port: 3550
      protocol: TCP
      targetPort: 3550

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendationservice
  name: recommendationservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: recommendationservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: recommendationservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_recommendationservice:latest
          imagePullPolicy: Always
          name: recommendationservice
          ports:
            - containerPort: 8088
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
    - name: tcp
      port: 8088
      protocol: TCP
      targetPort: 8088

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shippingservice
  name: shippingservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shippingservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shippingservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_shippingservice:latest
          imagePullPolicy: Always
          name: shippingservice
          ports:
            - containerPort: 50051
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
    - name: tcp
      port: 50051
      protocol: TCP
      targetPort: 50051
