kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ingress
  namespace: online-boutique
spec:
  ingressClassName: nginx
  rules:
    - host: car-serv-onpre.devopsedu.vn
      http:
        paths:
          - path: /adservice
            pathType: Prefix
            backend:
              service:
                name: online-boutique-adservice-service
                port:
                  number: 9555
